--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,15 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+serenity = { version = "0.12" }
+tokio = { version = "1", features = ["full"] }
 event_macro = { path = "./event_macro" }
+command_macro = { path = "./command_macro" }
 serde = { version = "1.0", features = ["derive"] }
-toml = "0.5"
+dashmap = "5.3"
 serde_json = "1.0"
 serde_yaml = "0.9"
 once_cell = "1.17"
 walkdir = "2.3"
+toml = "0.5"
 
